# holdem-rust

./: .gitignore  README.md
client/src/: main.rs
server/: Cargo.toml  users.db
server/src/: authentication.rs  db.rs  debug.rs  game.rs  lib.rs  main.rs  params.rs  player.rs  room.rs  threadpool.rs  webcommu.rs
server/src/game/: actionflag.rs  error.rs  evaluate.rs  game.rs  mod.rs  player.rs  player_manager.rs  rank.rs  table.rs  types.rs
server/src/room/: mod.rs  room.rs  room_manager.rs  types.rs
server/src/utils/: auth.rs  config.rs  db.rs  mod.rs
static/: game.html  lobby.html  login.html  register.html
