[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1"
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde_json = { version = "1.0.140" }
serde = { version = "1.0.128", features = ["derive"] }
tokio-tungstenite = "*"
futures-channel = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }